web/gui: thread-list: Fix column overflow; add .overxhide

--- a/web/gui.css
+++ b/web/gui.css
@@ -59,6 +59,9 @@ body {
    text-align: center;
 }
 
+.overxhide {
+   overflow-x: hidden;
+}
 .width100 {
    width: 100%;
 }
